# semap_ros

./: .gitignore  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml  setup.py
data/: duck.dae  wuson.ply
launch/: semap_database_services.launch  spatial_db_services.launch
src/: database_functions.py  description_functions.py  instance_functions.py  service_calls.py  service_functions.py  services.py  spatial_db_services.py  spatial_relations.py  test_functions.py  test_services.py  test_spatial_db_services.py  tf_functions.py  topology_functions.py
src/nodes/: services.py
src/semap_ros/: database_functions.py  description_functions.py  description_srv_calls.py  experimental_functions.py  instance_functions.py  instance_srv_calls.py  service_calls.py  service_functions.py  spatial_relations.py  subqueries.py  test_functions.py  tf_functions.py  topology_functions.py
src/spatial_db_ros/: description_srv_calls.py  instance_srv_calls.py  service_calls.py  subqueries.py
src/test/: test_imports.py
srv/: AddGeometry3DPose.srv  AddObjectDescriptions.srv  AddObjectInstances.srv  AddPoint2DModel.srv  AddPoint3DModel.srv  AddPolygon2DModel.srv  AddPolygon3DModel.srv  AddPolygonMesh3DModel.srv  AddPose2DModel.srv  AddPose3DModel.srv  AddRootFrame.srv  AddTriangleMesh3DModel.srv  BinaryRelationTest.srv  ChangeFrame.srv  CopyObjectInstances.srv  DeleteObjectDescriptions.srv  DeleteObjectInstances.srv  ExtrudePolygon.srv  GetAbsoluteBodyMeshes.srv  GetAbsoluteFootprintPolygons.srv  GetAllObjectDescriptions.srv  GetAllObjectInstances.srv  GetDirectionalRelations2D.srv  GetDistanceBetweenObjects.srv  GetGeometryModelBoundingBox.srv  GetGeometryModelTypes.srv  GetObjectContainers.srv  GetObjectDescriptionID.srv  GetObjectDescriptions.srv  GetObjectDescriptionsList.srv  GetObjectExtrusion.srv  GetObjectInstances.srv  GetObjectInstancesIDs.srv  GetObjectInstancesList.srv  GetObjectLocation.srv  GetObjectsInObjects.srv  GetObjectsIntersectObjects.srv  GetObjectsOnOBB3D.srv  GetObjectsOnObjects.srv  GetObjectsWithinArea.srv  (+17 more)
