<package>
  <name> semap_ros </name>
  <version>0.1.0</version>
  <description>
    The SEMAP framework in ROS.
  </description>

  <author email="hdeeken@uos.de">Henning Deeken</author>
  <maintainer email="hdeeken@uos.de">Henning Deeken</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/semap_ros</url>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>semap</build_depend>
  <build_depend>semap_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <build_depend>python_qt_binding</build_depend>
  <!--build_depend>rviz</build_depend-->

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>semap</run_depend>
  <run_depend>semap_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <run_depend>python_qt_binding</run_depend>
  <!--run_depend>rviz</run_depend-->

  <buildtool_depend>catkin</buildtool_depend>
</package>
